loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:8: error: not found: value n
  if (n<3){
      ^